care-australia-uat/force-app/main/default/objects/Active_FY22__c/Active_FY22__c.object-meta.xml
<CustomObject>
    <label>Active_FY22</label>
    <nameField>
        <label>Active_FY22</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active_FY22</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>