care-australia-uat/force-app/main/default/objects/Active_FY22__c/fields/Date_at_Jul2022__c.field-meta.xml
<CustomField>
    <fullName>Date_at_Jul2022__c</fullName>
    <label>Date_at_Jul2022</label>
    <type>Date</type>
</CustomField>