care-australia-uat/force-app/main/default/objects/Active_FY22__c/fields/IN__c.field-meta.xml
<CustomField>
    <fullName>IN__c</fullName>
    <label>IN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>