care-australia-uat/force-app/main/default/objects/Active_FY22__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <label>Opportunity.Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>