care-australia-uat/force-app/main/default/objects/Active_FY22__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFConstituentId__c</columns>
    <columns>FullName__c</columns>
    <columns>OpportunityName__c</columns>
    <columns>FYDonorLevel__c</columns>
    <columns>PaymentDate__c</columns>
    <columns>PaymentAmount__c</columns>
    <columns>AUSCode__c</columns>
    <columns>IN__c</columns>
    <columns>Date_at_Jul2022__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>